--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-    <link rel="stylesheet" href="Formulário.css" />
+    <link rel="stylesheet" href="contato.css" />
     <link rel="icon" href="/imagens/Logo Smart.enc" type="image/x-icon">
 
     <!-- Fontawesome CDN Link -->
