--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
         <ul>
             <li>
                 <a href="index.html">Início</a>
-            </li>
-            <li>
-              <a href="calculadora.html">Início</a>
-          </li>
+            </li></ul>
+            <ul>
+              <li>
+                  <a href="calculadora.html">Calculadora</a>
+              </li>
+            </ul>
             <li>
               <!--
                 <div class="new-management-banner" id="managementBanner">
